unpackaged/main/default/objects/Linked_Payment_Method__c/Linked_Payment_Method__c.object-meta.xml
<CustomObject>
    <label>Linked Payment Method</label>
    <nameField>
        <displayFormat>LPM-{0}</displayFormat>
        <label>Linked Payment Method #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>