unpackaged/main/default/objects/Linked_Payment_Method__c/fields/Link_Payment_Method_To__c.field-meta.xml
<CustomField>
    <fullName>Link_Payment_Method_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is just used to initially do the cloning</description>
    <label>Link Payment Method To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Linked Payment Methods</relationshipLabel>
    <relationshipName>Linked_Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>