unpackaged/main/default/objects/Linked_Payment_Method__c/fields/Linked_Between__c.field-meta.xml
<CustomField>
    <fullName>Linked_Between__c</fullName>
    <formula>HYPERLINK('./' + Linked_Payment_Method_From__r.Client__c, Linked_Payment_Method_From__r.Client__r.Full_Name__c) &amp; ' &lt;-&gt; ' &amp; HYPERLINK('./' + Linked_Payment_Method_To__r.Client__c, Linked_Payment_Method_To__r.Client__r.Full_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Between</label>
    <type>Text</type>
</CustomField>