unpackaged/main/default/objects/Linked_Payment_Method__c/fields/Linked_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Linked_Payment_Method__c</fullName>
    <formula>HYPERLINK('./' + Linked_Payment_Method_From__c, Linked_Payment_Method_From__r.Name) &amp; ' &lt;-&gt; ' &amp; HYPERLINK('./' + Linked_Payment_Method_To__c, Linked_Payment_Method_To__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Payment Method</label>
    <type>Text</type>
</CustomField>