unpackaged/main/default/objects/Linked_Payment_Method__c/fields/Linked_Payment_Method_From__c.field-meta.xml
<CustomField>
    <fullName>Linked_Payment_Method_From__c</fullName>
    <label>Linked Payment Method From</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Linked Payment Methods (From)</relationshipLabel>
    <relationshipName>Linked_Payment_Methods_From</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>